--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src='/scripts/pixi.js')
+    script(src='/scripts/libraries/pixi.js')
   body
     block content
     script(src='/scripts/hexMap.js')
