--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,8 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/scripts/libraries/pixi.js')
+    script(src='/scripts/libraries/jquery.min.js')
+    script(src='/scripts/libraries/stats.js')
   body
     block content
     script(src='/scripts/hexMap.js')
