made everything objects, termporarily broke dragging

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,4 +8,6 @@ html
     script(src='/scripts/libraries/stats.js')
   body
     block content
+    script(src='/scripts/classes/Hex.js')
+    script(src='/scripts/classes/HexGrid.js')
     script(src='/scripts/hexMap.js')
