--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,4 +10,4 @@ html
     block content
     script(src='/scripts/classes/Hex.js')
     script(src='/scripts/classes/HexGrid.js')
-    script(src='/scripts/hexMap.js')
+    script(src='/scripts/crashed.js')
