can select and deselect hexagons arbitrarily, dragging the map does not select a polygon

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,9 +3,11 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/jquery-ui.min.css')
     script(src='/scripts/libraries/pixi.js')
     script(src='/scripts/libraries/jquery.min.js')
     script(src='/scripts/libraries/stats.js')
+    script(src='/scripts/libraries/jquery-ui.min.js')
   body
     block content
     script(src='/scripts/classes/Hex.js')
