--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,11 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  #ui
+    #progressbar
+    ul#buildmenu
+      li Collector
+      li Wall
+      li Pylon
+      li.ui-state-disabled Barracks
+      li Tower
