added building classes and a clean system for having buildings do things

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,4 +12,6 @@ html
     block content
     script(src='/scripts/classes/Hex.js')
     script(src='/scripts/classes/HexGrid.js')
+    script(src='/scripts/classes/buildings/building.js')
+    script(src='/scripts/classes/buildings/tower.js')
     script(src='/scripts/crashed.js')
