--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,7 @@ html
     block content
     script(src='/scripts/classes/Hex.js')
     script(src='/scripts/classes/HexGrid.js')
-    script(src='/scripts/classes/buildings/building.js')
-    script(src='/scripts/classes/buildings/tower.js')
-    script(src='/scripts/crashed.js')
+    script(src='/scripts/classes/buildings/Building.js')
+    script(src='/scripts/classes/buildings/Tower.js')
+    script(src='/scripts/classes/Crashed.js')
+    script(src='/scripts/main.js')
