--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,9 +10,14 @@ html
     script(src='/scripts/libraries/jquery-ui.min.js')
   body
     block content
+    script(src='/scripts/libraries/astar.js')
+    script(src='/scripts/libraries/tween.min.js')
     script(src='/scripts/classes/Hex.js')
     script(src='/scripts/classes/HexGrid.js')
     script(src='/scripts/classes/buildings/Building.js')
     script(src='/scripts/classes/buildings/Tower.js')
     script(src='/scripts/classes/Crashed.js')
+
+    script(src='/scripts/classes/Enemy.js')
+
     script(src='/scripts/main.js')
