towers track the closest enemy using a kdtree library

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,8 @@ html
     block content
     script(src='/scripts/libraries/astar.js')
     script(src='/scripts/libraries/tween.min.js')
+    script(src='/scripts/libraries/kdTree.min.js')
+
     script(src='/scripts/classes/Hex.js')
     script(src='/scripts/classes/HexGrid.js')
     script(src='/scripts/classes/buildings/Building.js')
