towers shoot and kill stuff

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,6 +20,7 @@ html
     script(src='/scripts/classes/buildings/Tower.js')
     script(src='/scripts/classes/Crashed.js')
 
+    script(src='/scripts/classes/Unit.js')
     script(src='/scripts/classes/Enemy.js')
 
     script(src='/scripts/main.js')
