added enviornmental art and worked on game layers

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,5 +7,5 @@ block content
       li Collector
       li Wall
       li Pylon
-      li.ui-state-disabled Barracks
+      li Barracks
       li Tower
