--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,6 +14,7 @@ html
     script(src='/scripts/libraries/tween.min.js')
     script(src='/scripts/libraries/kdTree.min.js')
 
+    script(src='/scripts/classes/DraggableContainer.js')
     script(src='/scripts/classes/Hex.js')
     script(src='/scripts/classes/HexGrid.js')
     script(src='/scripts/classes/buildings/Building.js')
