--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,9 @@ extends layout
 block content
   #ui
     #progressbar
+    button.zoomIn= "+"
+    button.zoomOut= "-"
+    //- button= -
     ul#buildmenu
       li Collector
       li Wall
