--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,3 +24,20 @@ body {
 a {
   color: #00B7FF;
 }
+
+button {
+  z-index: 4;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+}
+
+.zoomIn {
+  right: 15px;
+  top: 50px;  
+}
+
+.zoomOut {
+  right: 15px;
+  top: 100px;  
+}
