--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,9 @@ block content
   #ui
     #progressbar
       .progress-label
+    #info
+      p#leveltext= "Level:"
+      p#goldtext= "Gold:"
     button#zoomIn= "+"
     button#zoomOut= "-"
     button#start= ">"
