Lots of refactoring, grid map generator is now in crashed class, enemies now have their own classes, added large blob too, changed wall image

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,6 +22,9 @@ html
     script(src='/scripts/classes/Crashed.js')
 
     script(src='/scripts/classes/Unit.js')
-    script(src='/scripts/classes/Enemy.js')
+    
+    script(src='/scripts/classes/enemies/Enemy.js')
+    script(src='/scripts/classes/enemies/SmallBlob.js')
+    script(src='/scripts/classes/enemies/LargeBlob.js')
 
     script(src='/scripts/main.js')
