some refactoring and commenting, added tload onitoring

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,8 @@ html
     script(src='/scripts/libraries/jquery-ui.min.js')
   body
     block content
+    script(src='/scripts/textures.js')
+
     script(src='/scripts/libraries/astar.js')
     script(src='/scripts/libraries/tween.min.js')
     script(src='/scripts/libraries/kdTree.min.js')
