refactored hex class

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,12 @@ html
     script(src='/scripts/libraries/kdTree.min.js')
 
     script(src='/scripts/classes/DraggableContainer.js')
-    script(src='/scripts/classes/Hex.js')
+    script(src='/scripts/classes/Selectable.js')
+
+    script(src='/scripts/classes/hexes/Hex.js')
+    script(src='/scripts/classes/hexes/Trees.js')
+    script(src='/scripts/classes/hexes/Rocks.js')
+
     script(src='/scripts/classes/HexGrid.js')
     script(src='/scripts/classes/buildings/Building.js')
     script(src='/scripts/classes/buildings/Tower.js')
