refactoring and improvements

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,7 +13,8 @@ block content
     //- button= -
     ul#buildmenu
       li Collector
+      li Farm
+      li Road
       li Wall
-      li Pylon
       li Barracks
       li Tower
