--- a/views/index.jade
+++ b/views/index.jade
@@ -16,5 +16,7 @@ block content
       li Farm
       li Road
       li Wall
-      li Barracks
+      //- li Barracks
       li Tower
+
+    button#sellbutton= "Sell"
