added food and farms

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,7 @@ block content
     #info
       p#leveltext= "Level:"
       p#goldtext= "Gold:"
+      p#foodtext= "Food:"
     button#zoomIn= "+"
     button#zoomOut= "-"
     button#start= ">"
