--- a/views/layout.jade
+++ b/views/layout.jade
@@ -34,4 +34,10 @@ html
     script(src='/scripts/classes/enemies/SmallBlob.js')
     script(src='/scripts/classes/enemies/LargeBlob.js')
 
+    script(src='/scripts/views/Button.js')    
+
+    script(src='/scripts/views/View.js')
+    script(src='/scripts/views/Mainmenu.js')
+    script(src='/scripts/views/Gameview.js')
+
     script(src='/scripts/main.js')
