--- a/views/layout.jade
+++ b/views/layout.jade
@@ -34,7 +34,8 @@ html
     script(src='/scripts/classes/enemies/SmallBlob.js')
     script(src='/scripts/classes/enemies/LargeBlob.js')
 
-    script(src='/scripts/views/Button.js')    
+    script(src='/scripts/ui/Button.js')
+    script(src='/scripts/ui/HexButton.js')
 
     script(src='/scripts/views/View.js')
     script(src='/scripts/views/Mainmenu.js')
