--- a/views/layout.jade
+++ b/views/layout.jade
@@ -37,6 +37,12 @@ html
     script(src='/scripts/ui/Button.js')
     script(src='/scripts/ui/HexButton.js')
 
+    script(src='/scripts/classes/BuildingContainer.js')
+    script(src='/scripts/classes/BuildingValidator.js')
+    script(src='/scripts/classes/EnemyContainer.js')
+    script(src='/scripts/classes/SelectionList.js')
+
+
     script(src='/scripts/views/View.js')
     script(src='/scripts/views/Mainmenu.js')
     script(src='/scripts/views/Gameview.js')
