--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
     script(src='/scripts/libraries/jquery.min.js')
     script(src='/scripts/libraries/stats.js')
     script(src='/scripts/libraries/jquery-ui.min.js')
+    script(src='/scripts/libraries/event_emitter.min.js')
   body
     block content
     script(src='/scripts/textures.js')
@@ -45,6 +46,6 @@ html
 
     script(src='/scripts/views/View.js')
     script(src='/scripts/views/Mainmenu.js')
-    script(src='/scripts/views/Gameview.js')
+    script(src='/scripts/views/GameUI.js')
 
     script(src='/scripts/main.js')
