--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
     link(rel='stylesheet', href='/stylesheets/jquery-ui.min.css')
     script(src='/scripts/libraries/pixi.js')
     script(src='/scripts/libraries/jquery.min.js')
+    //- script(src='/scripts/libraries/phaser.min.js')
     script(src='/scripts/libraries/stats.js')
     script(src='/scripts/libraries/jquery-ui.min.js')
     script(src='/scripts/libraries/event_emitter.min.js')
