--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -7,6 +7,8 @@ html
     script(src="/src/Preloader.js")
     script(src="/src/MainMenu.js")
     script(src="/src/Game.js")
+
+    script(src="/src/classes/Hex.js")        
   body
     block content
     #gamContainer
