hex selection and button selection

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -11,5 +11,5 @@ html
     script(src="/src/classes/Hex.js")        
   body
     block content
-    #gamContainer
+    #gameContainer
     script(src="/src/Main.js")
