removed fucking margin

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -9,7 +9,7 @@ html
     script(src="/src/Game.js")
 
     script(src="/src/classes/Hex.js")        
-  body
+  body(style="margin:0px;")
     block content
-    #gameContainer
-    script(src="/src/Main.js")
+        #gameContainer
+        script(src="/src/Main.js")
