--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -8,7 +8,8 @@ html
     script(src="/src/MainMenu.js")
     script(src="/src/Game.js")
 
-    script(src="/src/classes/Hex.js")        
+    script(src="/src/classes/Hex.js")
+    script(src="/src/classes/Enemy.js")
   body(style="margin:0px;")
     block content
         #gameContainer
