--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -10,6 +10,9 @@ html
 
     script(src="/src/classes/Hex.js")
     script(src="/src/classes/Enemy.js")
+
+    script(src="/src/modules/hexUtils.js")
+
   body(style="margin:0px;")
     block content
         #gameContainer
