physicsgit add --all

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -2,7 +2,10 @@ html
   head
     title= title
     script(src='/src/libraries/jquery.min.js')
+
     script(src='/src/libraries/phaser.min.js')
+    script(src='/src/libraries/p2.min.js')
+
     script(src="/src/Boot.js")
     script(src="/src/Preloader.js")
     script(src="/src/MainMenu.js")
