towers shoot enemies

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -13,6 +13,9 @@ html
 
     script(src="/src/classes/Hex.js")
     script(src="/src/classes/Enemy.js")
+    script(src="/src/classes/Wall.js")
+    script(src="/src/classes/Tower.js")
+    script(src="/src/classes/Bullet.js")
 
     script(src="/src/modules/hexUtils.js")
 
