added other building types

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -4,7 +4,7 @@ html
     script(src='/src/libraries/jquery.min.js')
     script(src='/src/libraries/astar.js')
     script(src='/src/libraries/phaser.min.js')
-    script(src='/src/libraries/p2.min.js')
+    //- script(src='/src/libraries/p2.min.js')
 
     script(src="/src/Boot.js")
     script(src="/src/Preloader.js")
@@ -12,10 +12,14 @@ html
     script(src="/src/Game.js")
 
     script(src="/src/classes/Hex.js")
-    script(src="/src/classes/Enemy.js")
     script(src="/src/classes/Wall.js")
     script(src="/src/classes/Tower.js")
+    script(src="/src/classes/Collector.js")
+    script(src="/src/classes/Pylon.js")
+    script(src="/src/classes/Power.js")
+
     script(src="/src/classes/Bullet.js")
+    script(src="/src/classes/Enemy.js")
 
     script(src="/src/modules/hexUtils.js")
 
