--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -16,12 +16,13 @@ html
     script(src="/src/classes/Tower.js")
     script(src="/src/classes/Collector.js")
     script(src="/src/classes/Pylon.js")
-    script(src="/src/classes/Power.js")
+    script(src="/src/classes/Reactor.js")
 
     script(src="/src/classes/Bullet.js")
     script(src="/src/classes/Enemy.js")
 
     script(src="/src/modules/hexUtils.js")
+    script(src="/src/modules/buildingValidator.js")
 
   body(style="margin:0px;")
     block content
