building adjacency requirment

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -17,6 +17,7 @@ html
     script(src="/src/classes/Collector.js")
     script(src="/src/classes/Pylon.js")
     script(src="/src/classes/Reactor.js")
+    script(src="/src/classes/Base.js")
 
     script(src="/src/classes/Bullet.js")
     script(src="/src/classes/Enemy.js")
