big enemies, dont destroy walls yet

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -22,6 +22,8 @@ html
     script(src="/src/classes/AoEBullet.js")
     script(src="/src/classes/Bullet.js")
     script(src="/src/classes/Enemy.js")
+    script(src="/src/classes/SmallEnemy.js")
+    script(src="/src/classes/BigEnemy.js")
 
     script(src="/src/modules/hexUtils.js")
     script(src="/src/modules/buildingValidator.js")
