--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -25,6 +25,7 @@ html
 
     script(src="/src/modules/hexUtils.js")
     script(src="/src/modules/buildingValidator.js")
+    script(src="/src/modules/collisionManager.js")
 
   body(style="margin:0px;")
     block content
