changed aoe bullet to bomb, bombs now explode where your mouse was

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -19,7 +19,7 @@ html
     script(src="/src/classes/Reactor.js")
     script(src="/src/classes/Base.js")
 
-    script(src="/src/classes/AoEBullet.js")
+    script(src="/src/classes/Bomb.js")
     script(src="/src/classes/Bullet.js")
     script(src="/src/classes/Enemy.js")
     script(src="/src/classes/SmallEnemy.js")
