--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -19,19 +19,19 @@ html
     script(src="/src/classes/Reactor.js")
     script(src="/src/classes/Base.js")
 
-    script(src="/src/classes/bullets/BasicBullet.coffee")
-    script(src="/src/classes/bullets/BombBullet.coffee")
-    script(src="/src/classes/bullets/Bullet.coffee")
-    script(src="/src/classes/bullets/FireBullet.coffee")
+    script(src="/src/classes/bullets/BasicBullet.js")
+    script(src="/src/classes/bullets/BombBullet.js")
+    script(src="/src/classes/bullets/Bullet.js")
+    script(src="/src/classes/bullets/FireBullet.js")
 
-    script(src="/src/classes/towers/BasicTower1.coffee")
-    script(src="/src/classes/towers/BasicTower2.coffee")
-    script(src="/src/classes/towers/BasicTower3.coffee")
-    script(src="/src/classes/towers/BombTower1.coffee")
-    script(src="/src/classes/towers/BombTower2.coffee")
-    script(src="/src/classes/towers/FireTower1.coffee")
-    script(src="/src/classes/towers/Tower.coffee")
-    script(src="/src/classes/towers/WallTower1.coffee")
+    script(src="/src/classes/towers/BasicTower1.js")
+    script(src="/src/classes/towers/BasicTower2.js")
+    script(src="/src/classes/towers/BasicTower3.js")
+    script(src="/src/classes/towers/BombTower1.js")
+    script(src="/src/classes/towers/BombTower2.js")
+    script(src="/src/classes/towers/FireTower1.js")
+    script(src="/src/classes/towers/Tower.js")
+    script(src="/src/classes/towers/WallTower1.js")
 
     script(src="/src/classes/Bomb.js")
     script(src="/src/classes/Bullet.js")
