hex menus, can upgrade basictower to basictower2 but otehrs dont work yet

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -13,10 +13,8 @@ html
 
     script(src="/src/classes/Hex.js")
     script(src="/src/classes/Wall.js")
-    script(src="/src/classes/Tower.js")
     script(src="/src/classes/Collector.js")
     script(src="/src/classes/Pylon.js")
-    script(src="/src/classes/Reactor.js")
     script(src="/src/classes/Base.js")
 
     script(src="/src/classes/bullets/Bullet.js")
@@ -33,8 +31,6 @@ html
     script(src="/src/classes/towers/FireTower1.js")
     script(src="/src/classes/towers/WallTower1.js")
 
-    script(src="/src/classes/Bomb.js")
-    script(src="/src/classes/Bullet.js")
     script(src="/src/classes/Enemy.js")
     script(src="/src/classes/SmallEnemy.js")
     script(src="/src/classes/BigEnemy.js")
@@ -42,7 +38,9 @@ html
     script(src="/src/modules/hexUtils.js")
     script(src="/src/modules/buildingValidator.js")
     script(src="/src/modules/collisionManager.js")
-
+    
+    script(src="/src/classes/HexMenu.js")
+  
   body(style="margin:0px;")
     block content
         #gameContainer
