--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -10,6 +10,7 @@ html
     script(src="/src/Preloader.js")
     script(src="/src/MainMenu.js")
     script(src="/src/Game.js")
+    script(src="/src/SavedGames.js")
 
     script(src="/src/classes/Hex.js")
     script(src="/src/classes/Wall.js")
