basic load/save working. wooooo

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -39,7 +39,9 @@ html
     script(src="/src/modules/hexUtils.js")
     script(src="/src/modules/buildingValidator.js")
     script(src="/src/modules/collisionManager.js")
+    script(src="/src/saveManager.js")
     
+    script(src="/src/classes/LabelButton.js")
     script(src="/src/classes/HexMenu.js")
   
   body(style="margin:0px;")
