new pathfinding. enemies target enarest collector or base. all calculations are precomputed before the round

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -39,6 +39,7 @@ html
     script(src="/src/modules/hexUtils.js")
     script(src="/src/modules/buildingValidator.js")
     script(src="/src/modules/collisionManager.js")
+    script(src="/src/modules/pathfinding.js")
     script(src="/src/saveManager.js")
     
     script(src="/src/classes/LabelButton.js")
