same starting map for every new game

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -11,6 +11,7 @@ html
     script(src="/src/MainMenu.js")
     script(src="/src/Game.js")
     script(src="/src/SavedGames.js")
+    script(src="/src/defaultStart.js")
 
     script(src="/src/classes/Hex.js")
     script(src="/src/classes/Wall.js")
