wooooooooooooooooooooo, beutiful range outlines dammmnnnn

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -1,4 +1,4 @@
-html
+whtml
   head
     title= title
     script(src='/src/libraries/jquery.min.js')
@@ -42,6 +42,7 @@ html
     script(src="/src/modules/collisionManager.js")
     script(src="/src/modules/pathfinding.js")
     script(src="/src/saveManager.js")
+    script(src="/src/classes/TowerRangeDisplay.js")
     
     script(src="/src/classes/LabelButton.js")
     script(src="/src/classes/HexMenu.js")
