building refactor and fixed pathing after destroying collectors

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -14,10 +14,11 @@ whtml
     script(src="/src/defaultStart.js")
 
     script(src="/src/classes/Hex.js")
-    script(src="/src/classes/Wall.js")
-    script(src="/src/classes/Collector.js")
-    script(src="/src/classes/Pylon.js")
-    script(src="/src/classes/Base.js")
+    script(src="/src/classes/Building.js")
+    script(src="/src/classes/buildings/Wall.js")
+    script(src="/src/classes/buildings/Collector.js")
+    script(src="/src/classes/buildings/Pylon.js")
+    script(src="/src/classes/buildings/Base.js")
 
     script(src="/src/classes/bullets/Bullet.js")
     script(src="/src/classes/bullets/BasicBullet.js")
