--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -4,7 +4,7 @@ whtml
     script(src='/src/libraries/jquery.min.js')
     script(src='/src/libraries/astar.js')
     script(src='/src/libraries/phaser.min.js')
-    //- script(src='/src/libraries/p2.min.js')
+    //- script(src='/src/libraries/phaser.dev.min.js')
 
     script(src="/src/Boot.js")
     script(src="/src/Preloader.js")
