we added knockback\!\!\!

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -47,6 +47,8 @@ whtml
     
     script(src="/src/classes/LabelButton.js")
     script(src="/src/classes/HexMenu.js")
+    script(src="/src/actions.js")
+
 
     script(src="/src/defaultStart.js")
 
