--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -17,6 +17,8 @@ whtml
     script(src="/src/classes/Enemy.js")
     script(src="/src/classes/SmallEnemy.js")
 
+    script(src="/src/classes/District.js")
+
     script(src="/src/modules/hexUtils.js")
     script(src="/src/modules/buildingValidator.js")
     script(src="/src/modules/collisionManager.js")
