new method for building buildings

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -27,6 +27,7 @@ whtml
     
     script(src="/src/classes/LabelButton.js")
     script(src="/src/classes/HexMenu.js")
+    script(src="/src/classes/BuildButton.js")
     script(src="/src/actions.js")
 
 
