fixed enclosure finding issues

--- a/views/phaser.jade
+++ b/views/phaser.jade
@@ -13,24 +13,14 @@ html
     //- script(src="/src/GameCore.js")
     script(src="/src/GameClient.js")
     script(src="/src/Player.js")
-
     script(src="/src/hexlib.js")
+
+    script(src="/src/get_enclosures.js")
 
     //- script(src="/src/classes/Enemy.js")
     //- script(src="/src/classes/SmallEnemy.js")
 
     //- script(src="/src/classes/District.js")
-
-    //- script(src="/src/modules/hexUtils.js")
-    //- script(src="/src/modules/buildingValidator.js")
-    //- script(src="/src/modules/collisionManager.js")
-    script(src="/src/modules/pathfinding.js")
-    //- script(src="/src/saveManager.js")
-
-    //- script(src="/src/classes/LabelButton.js")
-    //- script(src="/src/classes/HexMenu.js")
-    //- script(src="/src/classes/BuildButton.js")
-    //- script(src="/src/actions.js")
 
 
   body(style="margin:0px;")
